Playlist does not show objects
-
First start the VLC version 2.1.2: In "My Computer - My Videos" to display all objects.
-
Line 3831 of vlcrc: #demux=
-
Change in Preferences - All Input / Codecs - Demuxer - Demuxer modules from Automatic to AVI demuxer, save the change and close the VLC.
-
Line 3831 of vlcrc: demux=avi
-
Start VLC and open about "Open File" a video file.
-
There comes a error message.
-
Change in Preferences - All Input / Codecs - Demuxer - Demuxer modules from AVI demuxer to Automatic, save the change and close the VLC.
-
Line 3831 of vlcrc: demux=any
-
Start VLC. In "My Computer My Videos" no objects are displayed.