input: correct default value check for $demux (fixes #10475)